# infrawhisper

./: .air.toml  .editorconfig  .env.example  .gitignore  CLAUDE.md  Dockerfile.api-server  Dockerfile.collector  Dockerfile.stream-processor  InfraWhisper_PRD_v1.0.docx  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  go.mod  go.sum  tools.go
.github/workflows/: ci.yml  release.yml  security.yml
agent/: Cargo.toml  Dockerfile
agent/src/: collector.rs  config.rs  log_tail.rs  main.rs  metrics_api.rs  node_watcher.rs  watcher.rs
ai-engine/: Dockerfile  pyproject.toml
ai-engine/app/: config.py  main.py
ai-engine/app/llm/: client.py  prompts.py  structured_output.py
ai-engine/app/models/: cost.py  incident.py  query.py
ai-engine/app/routers/: analyze.py  health.py  optimize.py  query.py
ai-engine/app/services/: cost_optimizer.py  incident_analyzer.py  query_engine.py
ai-engine/app/utils/: clickhouse.py  sql_generator.py
ai-engine/tests/: conftest.py  test_analyzer.py  test_cost_optimizer.py  test_query_engine.py
cmd/api-server/: main.go
cmd/collector/: main.go
cmd/stream-processor/: main.go
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
dashboard/src/hooks/: useLogs.ts  useMetrics.ts  useQuery.ts  useWebSocket.ts
dashboard/src/lib/: api.ts  auth.ts  utils.ts  ws.ts
dashboard/src/types/: cluster.ts  costs.ts  incidents.ts  logs.ts  metrics.ts
deploy/argocd/: application.yaml
deploy/helm/infrawhisper/: Chart.yaml  values.yaml
deploy/k8s/: orbstack-init.sh
docs/superpowers/plans/: 2026-03-12-subproject-a-go-backend.md  2026-03-12-subproject-b-ai-engine.md  2026-03-12-subproject-c-dashboard.md  2026-03-12-subproject-d-infrastructure.md  2026-03-12-subproject-e-rust-agent.md  2026-03-13-k8s-dev-cluster-readiness.md
docs/superpowers/specs/: 2026-03-12-infrawhisper-subproject-a-design.md  2026-03-13-k8s-dev-cluster-readiness-design.md
internal/api/: server.go
internal/api/handlers/: alerts.go  clusters.go  costs.go  handler.go  health.go  incidents.go  logs.go  metrics.go  pods.go  query.go  traces.go  webhooks.go
internal/api/middleware/: auth.go  cors.go  logging.go  ratelimit.go
internal/auth/: jwt.go  rbac.go  tenant.go
internal/collector/: exporter.go  processor.go  receiver.go  sampler.go
internal/config/: config.go
internal/stream/: aggregator.go  alerteval.go  anomaly.go  consumer.go  producer.go
scripts/: dev-setup.sh  migrate.sh  seed-data.sh
(+62 files in other folders)
