[package]
name = "infrawhisper-agent"
version = "0.1.0"
edition = "2021"
description = "InfraWhisper Kubernetes node agent — collects metrics, logs, and traces"

[[bin]]
name = "infrawhisper-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
kube = { version = "0.93", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.22", features = ["v1_29"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
opentelemetry = { version = "0.24", features = ["metrics"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "metrics"] }
futures = "0.3"
bytes = "1"
tokio-stream = "0.1"
